@@ -13,7 +13,8 @@ Norman-0.6.2
 
 -   Hooks added to `Table` to allow more control over validation.
 -   Add `Query.field`, allowing queries to traverse tables.
--   Add `Query.add`, allowing records to be created based on query criteria
+-   Add `Query.add`, allowing records to be created based on query criteria.
+-   `Field` level validation added, including some validator factories. 
 
 
 Norman-0.6.1
